--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.tt.rotate_piechart.RotatePieChart
+    <com.tt.rotatepiechart.RotatePieChart
         android:id="@+id/pie_chart"
         android:layout_width="match_parent"
         android:layout_height="300dp"
